kubernetes-2/namespace/devops/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: external
  selector:
    app: grafana
