kubernetes-2/namespace/devops/grafana/ingress-preprod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana-preprod-k8s.flowlog-stats.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
